Table with data done

--- a/app/scripts/index/index.html
+++ b/app/scripts/index/index.html
@@ -5,6 +5,8 @@
     <hr class="star-light">
     <h2 class="font-weight-light mb-0">Mosquito grapher tool</h2>
     <br>
+    <input type="file" accept=".csv"/>
+    <br>
     <input type="file" id="filepicker" name="fileList" webkitdirectory multiple />
     <br>
     <button class="btn btn-secondary" type="submit" ng-click="start_app()" data-dismiss="modal">Start to graph</button>
