--- a/app/scripts/index/index.html
+++ b/app/scripts/index/index.html
@@ -5,7 +5,7 @@
     <hr class="star-light">
     <h2 class="font-weight-light mb-0">Mosquito grapher tool</h2>
     <br>
-    <input type="file" accept=".csv"/>
+    <input type="file" id="filecoor" accept=".csv"/>
     <br>
     <input type="file" id="filepicker" name="fileList" webkitdirectory multiple />
     <br>
