Corrected async problems

--- a/app/scripts/menu/menu.html
+++ b/app/scripts/menu/menu.html
@@ -12,13 +12,13 @@
 </nav>
 
 <!-- About Section -->
-<section class="bg-secondary text-white mb-0" id="about">
+<section class="mb-0" id="about">
   <div class="container" style="
-    padding-top: 5%;
+    padding-top: 2%;
     ">
-    <h2 class="text-center text-uppercase text-white">Available files in: </h2>
+    <h2 class="text-center text-uppercase">Available files in: </h2>
     <h5 class="text-center">{{work_folder}}</h5>
-    <hr class="star-light mb-5">
+    <hr class="star-dark mb-5">
     <div class="row">
       <label for="range">Time: </label>
       <input type="number" ng-model="time" />
