Specific info of nodes

--- a/app/scripts/menu/menu.html
+++ b/app/scripts/menu/menu.html
@@ -37,7 +37,8 @@
       <input style="width: 100%" type="range" name="range" ng-model="time" min="0"  max="{{maxTime}}">
     </div>
     <div class="row">
-      <div id="pies" class="col-10"></div>
+      <div id="tooltip" class="hidden col-2"></div>
+      <div id="pies" class="col-8"></div>
       <div id="pieData" class="col-2">Data</div>
     </div>
   </div>
