--- a/app/scripts/menu/menu.html
+++ b/app/scripts/menu/menu.html
@@ -22,11 +22,11 @@
     <div class="row">
       <div class="col-3">
         <label for="range">Time: </label>
-        <input type="number" ng-model="time" />
+        <input type="number" ng-model="time"/>
       </div>
       <div class="col-3">
         <label for="range">Radio: </label>
-        <input type="number" ng-model="radio" />
+        <input type="number" ng-model="radio" ng-change="updateRadius()"/>
       </div>
       <div class="col-3">
         <button ng-click="stop()">{{status}}</button>
