--- a/app/scripts/menu/menu.html
+++ b/app/scripts/menu/menu.html
@@ -5,7 +5,7 @@
 
     <div class="col-2">
     <button ng-click="logout()" class="navbar-toggler navbar-toggler-right text-uppercase bg-secondary text-white rounded" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Logout
+        Exit
       </button>
     </div>
   </div>
@@ -43,16 +43,3 @@
     </div>
   </div>
 </section>
-
-<!-- Portfolio Grid Section
-<section class="portfolio" id="portfolio">
-  <div class="container">
-    <div id="lineGraph" class="col-6"></div>
-  </div>
-</section>
--->
-<div class="copyright py-4 text-center text-white">
-  <div class="container">
-    <small>Copyright &copy; Your Website 2018</small>
-  </div>
-</div>
