fixed delay of cluster calculate

--- a/app/scripts/index/index.html
+++ b/app/scripts/index/index.html
@@ -20,7 +20,7 @@
     </div>
     <br>
     <label for="clusters">(Optional) Numbers of poblations: </label>
-    <input type="number" ng-model="clusterNumber" id="clusters" onchange="angular.element(this).scope().getCoorDetails(this)"/>
+    <input type="number" ng-model="clusterNumber" id="clusters" onchange="angular.element(this).scope().getClusters()"/>
     <br>
     <br>
     <button class="btn btn-secondary" type="submit" ng-click="start_app()" data-dismiss="modal">Start to graph</button>
